  related to Docutils components.

* docutils/transforms/universal.py: Changed ``Messages`` transform to
  properly filter out system messages below the warning threshold.

* docutils/writers/html4css1.py:

  - Made XHTML-compatible (switched to lowercase element & attribute
    names; empty tag format).
  - Escape double-dashes in comment text.

* docutils/writers/pseudoxml.py: Renamed from pprint.py.

* spec/pep-0257.txt: Clarified prohibition of signature repetition.

* spec/rst/reStructuredText.txt:

  - Clarified field list usage.
  - Updated enumerated list description.

* spec/rst/alternatives.txt: Expanded auto-enumerated list idea;
  thanks to Fred Bremmer.

* spec/rst/problems.txt: Updated the Enumerated List Markup
  discussion.

* test: Made test modules standalone (subdirectories became packages).

* test/DocutilsTestSupport.py: Support for PEP extensions to
  reStructuredText.

* test/package_unittest.py: Renamed from UnitTestFolder.py.

  - Now supports true packages containing test modules
    (``__init__.py`` files required); fixes duplicate module name bug.

* test/test_pep/: Subpackage added to project; PEP testing.


Release 0.1 (2002-04-20)
========================

This is the first release of Docutils, merged from the now inactive
reStructuredText__ and `Docstring Processing System`__ projects.  For
the pre-Docutils history, see the `reStructuredText HISTORY`__ and the
`DPS HISTORY`__ files.

__ http://structuredtext.sourceforge.net/
__ http://docstring.sourceforge.net/
__ http://structuredtext.sourceforge.net/HISTORY.html
__ http://docstring.sourceforge.net/HISTORY.html

General changes: renamed 'dps' package to 'docutils'; renamed
'restructuredtext' subpackage to 'rst'; merged the codebases; merged
the test suites (reStructuredText's test/test_states renamed to
test/test_rst); and all modifications required to make it all work.

* docutils/parsers/rst/states.py:

  - Improved diagnostic system messages for missing blank lines.